Changes for 1.0.4

* fix bug 2815801 Bid placement Error (sgb)

* Complete gutting of NonCombatMoveSea; Removed most plane analysis code and replaced with calls to invitePlaneAttack in SUtils; 
  tweak to purchasing when resources are high to help with other maps; 
  prepared code for purchasing units for the best transport attack (Kevin Moore)

* Add some missing units for NWO and activate tech for extra 4 players in NWO-9 (ComradeKev)

* Check if SBR damages unit production before displaying factory damage (ComradeKev)

* Fix bug 2801738 just use Infantry instead of chineseInfantry so they stack properly (ComradeKev)

* Add victory conditions to game notes (ComradeKev)

* Add NOs to game notes for AA50 (ComradeKev)

* Fix bug 2807397 Revise NWO 9 Player placements for E/W Romania (ComradeKev)

* Fix number of paratroops shown loading on to bomber (ComradeKev)

* Change default route finding to try land routes first (ComradeKev)

* Fix allMatch and someMatch returning true on empty collections (ComradeKev)

* Add victory conditions to game notes (ComradeKev)

* Enable turning on/off relief tiles on AA50 (ComradeKev)

* Add Relief Tiles for AA50 (Much thanks to Imperious Leader)

* Fix bug 281534 fighter movement calculation (ComradeKev)

* Moved capitol markers to better fit with AA50 reliefs (BraveHamster)

* Fix bug 2810759 Non-amphib units taken as casualties before amphib units (Seidelin)

* Fix bug 2807878 Planes attacking w/ amphib units can't retreat (Seidelin)

* Strong AI fix bid purchasing and put in code for blitzing empty territories (Kevin Moore)

* show line/column of xml errors when a game fails to parse (sgb)

* Modify AI: Apply purchasing changes to sea units (Kevin Moore)

* Show user ip/port lobby server tries to connect to when hosting a game fails because the computer is not reachable from the lobby server (sgb)
